--- a/ProyectoP2Final.csproj
+++ b/ProyectoP2Final.csproj
@@ -49,7 +49,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\habitacion.jpg" />
 	  <None Remove="Resources\Images\hotel.jpg" />
+	  <None Remove="Resources\Images\tuki.jpg" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -58,6 +60,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\Contacto.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\INFO.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\Inicio.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
